delete image folder

--- a/Sols/Ex2/sheet02.ipynb
+++ b/Sols/Ex2/sheet02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def biweight(x, mu, w):\n",
+    "    \"\"\"biweight kernel at mean mu, with bandwidth w evaluated at x\"\"\"\n",
+    "    #TODO: implement the quartic (biweight) kernel\n",
+    "\n",
+    "    ##we are providing x as a form of array\n",
+    "    return (15./16*w)*(1-((x-mu)/w)**2)**2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +60,8 @@
     }
    ],
    "source": [
-    "def biweight(x, mu, w):\n",
-    "    \"\"\"biweight kernel at mean mu, with bandwidth w evaluated at x\"\"\"\n",
-    "    #TODO: implement the quartic (biweight) kernel\n",
     "\n",
-    "    ##we are providing x as a form of array\n",
-    "    return (15./16*w)*(1-((x-mu)/w)**2)**2\n",
-    "\n",
+    "# TODO plot the kernel\n",
     "x = np.linspace(-1,1,1000)\n",
     "\n",
     "kernel = np.array([biweight(x,mu = 0,w = 1)]).reshape(1000)\n",
@@ -66,13 +76,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Kernel for the fiven data and various values for $w$ and $N$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[!Alt]()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO plot the kernel"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
