Added comments by tutor

--- a/Sols/Ex2/sheet02_simran.ipynb
+++ b/Sols/Ex2/sheet02_simran.ipynb
@@ -27,6 +27,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- u = abs(x[i]-mu)/w\n",
+    "- create a mask and multiply\n",
+    "- our kernel looks wrong"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 310,
    "metadata": {},
@@ -173,7 +182,7 @@
     "        k_sum += ((biweight(x,obs[i],w))/n)\n",
     "\n",
     "    fx = k_sum\n",
-    "    return fx"
+    "    return fx #use np.mean directly, vectorize"
    ]
   },
   {
@@ -257,6 +266,13 @@
    "metadata": {},
    "source": [
     "### With more data points(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for more data points smallesrt bandwidth is thebest option."
    ]
   },
   {
@@ -353,6 +369,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Denominator tells us that higher the number of neighnours higher the learning rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(b) bonus"
    ]
   },
@@ -374,8 +397,7 @@
     "        Array of points underlying the KDE, shape (d, N1)\n",
     "    xt : np.ndarray\n",
     "        Current state of the mean shift algorithm, shape (d, N2)\n",
-    "    n_components : int, optional\n",
-    "        Number of requested components. By default returns all components.\n",
+    "    \n",
     "        \n",
     "    Returns\n",
     "    -------\n",
@@ -389,14 +411,15 @@
     "    \n",
     "    # TODO: compute a N by N matrix 'dist' of distances, \n",
     "    #       such that dists[i, j] is the distance between x[i] and xt[j]\n",
+    "    #Broadcasting = (d,N1,N2) = (d,N1,1)-(d,1,N2) = offsets = x[:, :, None] - xt[:, None, :]\n",
     "    d=np.zeros((len(x),len(xt)))\n",
     "    for i in range(0,len(xt)):\n",
     "        for j in range(0,len(x)):\n",
-    "            d[i,j] = np.sqrt(x[i]**2 + xt[j]**2)\n",
+    "            d[i,j] = np.sqrt(x[i]**2 - xt[j]**2)\n",
     "        \n",
     "    \n",
     "    # TODO: threshold the distances with r to get an array of masks for every data point\n",
-    "    masks = []\n",
+    "    masks = [] #create a mask = x[0,0,1,0]1 for within\n",
     "    for i in range(0,len(x)):\n",
     "        ind = np.where(d[i]<r)[0]\n",
     "        masks.append(d[i,ind])\n",
@@ -774,6 +797,20 @@
     "        # TODO: for the given k and init, run k-means 20 times or more (using the kmeans function above)\n",
     "        #       and plot the resulting energy trajectores\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 Bonus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of modes icrease when we increase the number of bandwidths. We see this in the first exercise. Kernel becomes flatter for higher bandwidths."
    ]
   }
  ],
