--- a/Sols/Ex3/sheet03.ipynb
+++ b/Sols/Ex3/sheet03.ipynb
@@ -821,7 +821,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -835,11 +835,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fb35402188f4b53ea7ca1c59d4dd610af939fac77374d085b1d6da6db096eebf"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   },
   "widgets": {
