--- a/Sols/Ex5/sheet05.ipynb
+++ b/Sols/Ex5/sheet05.ipynb
@@ -480,20 +480,22 @@
    "source": [
     "Answer 4.a) \n",
     "\n",
-    "given that, first a point $x_i$ chosen prom the sample and probability $p(y_i = 1| x)$ is modelled by the bernoulli distribution with mean $\\mu_x$. i.e. \n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "p(y_i = 1| x) = B(\\mu_x)\n",
-    "\\end{equation}\n",
+    "given that, first we estimate $p(x|\\mu_x)$ using the function given in the question i.e. using  bernoulli distribution with mean $\\mu_x$.\n",
     "\n",
     "using Bayes' Theorem we can calculate the posterior distribution as \n",
     "\n",
     "\\begin{equation}\n",
-    "p(x|\\mu_x) = \\frac{p(y_i = 1| x)p(y_i = 1)}{p(x)}\n",
+    "p(\\mu_x|x) = \\frac{p(x|\\mu_x)p(\\mu_x)}{p(x)}\n",
     "\\end{equation}\n",
     "\n",
-    "where $p(y_i = 1) = P_{prior}(\\mu_x)$ and p(x) = 1/N where N is a sample size"
+    "\n",
+    "\\begin{equation}\n",
+    "p(\\mu_x|x) = \\frac{C_{xy}p(\\mu_x)}{p(x)}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "where  $p(x|\\mu_x)$ is the likelihood of $\\mu_x $ and $p(\\mu_x)$ is the prior probability and p(x) can be calculated using the normalizing condition ie\n",
+    "\n"
    ]
   },
   {
@@ -719,6 +721,8 @@
     "    # TODO: sort the points\n",
     "\n",
     "    pts_sorted = np.sort(pts)\n",
+    "\n",
+    "    pts1 = pts_sorted[]\n",
     "    \n",
     "    # TODO: use np.searchsorted on the interval boundaries \n",
     "    #       to find number of points inside each interval (don't use loops!)\n",
