--- a/Sols/Ex5/sheet05.ipynb
+++ b/Sols/Ex5/sheet05.ipynb
@@ -490,11 +490,15 @@
     "\n",
     "\n",
     "\\begin{equation}\n",
-    "p(\\mu_x|x) = \\frac{C_{xy}p(\\mu_x)}{p(x)}\n",
+    "p(\\mu_x|x) = \\frac{C_{x1}p(\\mu_x)}{N_xp(x)}\n",
     "\\end{equation}\n",
     "\n",
     "\n",
-    "where  $p(x|\\mu_x)$ is the likelihood of $\\mu_x $ and $p(\\mu_x)$ is the prior probability and p(x) can be calculated using the normalizing condition ie\n",
+    "where likelihood $C_{x1} $ is the total number of data points labelled as 1 in the interval $|x-x_i|<r$ and $N_x$ is the total number of data points within the interval and $p(\\mu_x)$ is the prior probability and p(x) can be calculated using the normalization\n",
+    "\n",
+    "\\begin{equation}\n",
+    "p(x) = \\sum_{\\mu_x} \\frac{C_{x1}}{N}\n",
+    "\\end{equation}\n",
     "\n"
    ]
   },
