added non-loop sol of 4

--- a/Sols/Ex5/sheet05_main.ipynb
+++ b/Sols/Ex5/sheet05_main.ipynb
@@ -1036,6 +1036,66 @@
     "plt.imshow(M)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Attempt to avoid loops in part c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_points_within_distance(x, pts, r):\n",
+    "    \"\"\"\n",
+    "    Count number of points among pts within a distance r of query points x (in 1D).\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : np.ndarray\n",
+    "        Query points of shape (M).\n",
+    "    pts : np.ndarray\n",
+    "        Points to be searched, shape (N).\n",
+    "    r : float\n",
+    "        radius.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.ndarray\n",
+    "        Array of counts of shape (M)\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    # TODO: sort the points\n",
+    "    pts = np.sort(pts)\n",
+    "    \n",
+    "    # TODO: use np.searchsorted on the interval boundaries \n",
+    "    #       to find number of points inside each interval (don't use loops!)\n",
+    "    r_up =x+r\n",
+    "    r_bel = x-r\n",
+    "    ind = np.searchsorted(r_up,r_bel) #used to create an array with boundaries eg: [-0.3,0.3,0.7,1.3...] if x is [0,1,2...] and r=0.3\n",
+    "    boundaries = np.insert (r_up,ind,r_bel)\n",
+    "    search = np.searchsorted(boundaries,pts) #finds the indices of pts points between -0.3 and 0.3, 0.3 and 0.7, etc\n",
+    "    search = search[np.where((search%2)!=0)] #seperates indices of points lying only between -0.3 and 0.3, 0.7 and 1.3,etc\n",
+    "    counts = np.unique(search,return_counts=True)[1] # returns counts\n",
+    "         \n",
+    "    return counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **This method failed becuase in our case r is bigger than the seperation between points in x.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
