--- a/Sols/Ex5/sheet05_main_tutor.ipynb
+++ b/Sols/Ex5/sheet05_main_tutor.ipynb
@@ -343,13 +343,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
-    "# set aside 20% of train and test data for evaluation\n",
+    "# set aside N=200 of train and test data for evaluation\n",
     "X_train, X_test, y_train, y_test = train_test_split(features.T, labels,\n",
-    "    test_size=0.09, shuffle = True, random_state = 8)\n",
+    "    test_size=200, shuffle = True, random_state = 8)\n",
     "\n",
     "# Use the same function above for the validation set\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, \n",
-    "    test_size=0.25, random_state= 8) # 0.25 x 0.8 = 0.2\n",
+    "    test_size=200, random_state= 8) \n",
     "\n",
     "\n",
     "print(\"X_train shape: {}\".format(X_train.shape))\n",
