solved the second exercise

--- a/Sols/Ex6/sheet06.ipynb
+++ b/Sols/Ex6/sheet06.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines.shape=(3729, 4)\n",
+      "features.shape=(3, 3729), labels.shape=(3729,)\n"
+     ]
+    }
+   ],
    "source": [
     "# load the data\n",
     "with open('data/vostok.txt', 'r') as f:\n",
@@ -59,20 +68,115 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The sum of squared residuals is - 6362.9375\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression as LR\n",
     "\n",
-    "# TODO: fit the linear regressor and compute the sum of square deviations"
+    "\n",
+    "\n",
+    "# TODO: fit the linear regressor and compute the sum of square deviations\\\n",
+    "\n",
+    "model =  LR()   ##first creating a model\n",
+    "model.fit(features.T,labels)   ##this will fit the model with the input features.T and target variable labels\n",
+    "\n",
+    "y_pred = model.predict(features.T) ### this is the predicted labels\n",
+    "\n",
+    "\n",
+    "def squared_residuls(pred):\n",
+    "    return np.sum(np.square(pred-labels))\n",
+    "square_error_base = squared_residuls(y_pred)\n",
+    "print(\" The sum of squared residuals is - \" +str(square_error_base))    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6362.9375, 6817.8086, 19161.924, 6528.2812]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: for each feature, randomly permute it amongst the samples, \n",
-    "#       refit the regressor and compte sum of squared deviations"
+    "\n",
+    "def permutation(i):\n",
+    "    \"\"\"\n",
+    "    Input : takes the three values of the particular row i =[0,1,2]\n",
+    "    output: return the feature matrix with ith row permuted\n",
+    "\n",
+    "    \"\"\"\n",
+    "    permutation_array = np.arange(0,len(labels)) ##this will create the index array ranging from 0 to N-1 \n",
+    "\n",
+    "    np.random.shuffle(permutation_array)\n",
+    "    X_i = np.array(features)\n",
+    "\n",
+    "    X_i[i,:] = features[i,:][permutation_array]   ##permuting the ith row\n",
+    "\n",
+    "    return  X_i\n",
+    "\n",
+    "#       refit the regressor and compte sum of squared deviations\n",
+    "square_res_arr = [square_error_base]\n",
+    "for i in range(3):\n",
+    "    X = permutation(i)\n",
+    "    model.fit(X.T,labels)\n",
+    "    y_pred = model.predict(X.T)\n",
+    "    epsilon = squared_residuls(y_pred)\n",
+    "    square_res_arr.append(epsilon)\n",
+    "square_res_arr    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6818.048"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2 = LR()\n",
+    "\n",
+    "\n",
+    "model2.fit(X_1.T,labels)\n",
+    "\n",
+    "ypre = model2.predict(X_1.T)\n",
+    "\n",
+    "squared_residuls(ypre)\n"
    ]
   },
   {
@@ -291,9 +395,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlph]",
+   "display_name": "Python 3.9.12 ('Pytorch')",
    "language": "python",
-   "name": "conda-env-mlph-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -305,7 +409,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fb35402188f4b53ea7ca1c59d4dd610af939fac77374d085b1d6da6db096eebf"
+   }
   }
  },
  "nbformat": 4,
