--- a/Sols/Ex7/sheet07_main.ipynb
+++ b/Sols/Ex7/sheet07_main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sheet 7"
+    "# Sheet 7 (Sachin Gupta, Bhavesh Rajpoot and Simran Joharle)"
    ]
   },
   {
@@ -365,6 +365,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -374,9 +375,9 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "    a_0 &= \\bold{x} \\\\\n",
-    "    a_{i+1} &= ReLU(\\bold{W}_i \\bold{a}_i + \\bold{b}_i) \\; for\\; i \\in {0,...,H-1} \\\\\n",
-    "    \\bold{y} &= \\bold{W}_H \\bold{a}_H + \\bold{b}_H\n",
+    "    a_0 &= \\mathbf{x} \\\\\n",
+    "    a_{i+1} &= ReLU(\\mathbf{W}_i \\mathbf{a}_i + \\mathbf{b}_i) \\; for\\; i \\in {0,...,H-1} \\\\\n",
+    "    \\mathbf{y} &= \\mathbf{W}_H \\mathbf{a}_H + \\mathbf{b}_H\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
@@ -384,8 +385,8 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "    a_{1} &= ReLU(\\bold{W}_0 \\bold{x} + \\bold{b}_0) \\\\\n",
-    "    \\bold{y} &= \\bold{W}_1 \\bold{a}_1 + \\bold{b}_1\n",
+    "    a_{1} &= ReLU(\\mathbf{W}_0 \\mathbf{x} + \\mathbf{b}_0) \\\\\n",
+    "    \\mathbf{y} &= \\mathbf{W}_1 \\mathbf{a}_1 + \\mathbf{b}_1\n",
     "\\end{align*}\n",
     "$$ -->\n",
     "\n",
@@ -393,8 +394,8 @@
     "\n",
     "$$\n",
     "\\begin{alignat*}{2}\n",
-    "    \\underset{m \\times p}{\\mathrm{a_{1}}} &=   ReLU(\\;\\underset{m \\times n}{\\bold{x}}\\;\\underset{n\\times p}{\\bold{W}_0} + \\underset{1 \\times p}{\\bold{b}_0}\\;) \\\\\n",
-    "    \\underset{m \\times k}{\\mathrm{\\bold{y}}} &=  \\underset{m \\times p}{\\bold{a_1}}\\;\\underset{p \\times k}{\\bold{W}_1} + \\underset{1 \\times k}{\\bold{b}_1}\n",
+    "    \\underset{m \\times p}{\\mathrm{a_{1}}} &=   ReLU(\\;\\underset{m \\times n}{\\mathbf{x}}\\;\\underset{n\\times p}{\\mathbf{W}_0} + \\underset{1 \\times p}{\\mathbf{b}_0}\\;) \\\\\n",
+    "    \\underset{m \\times k}{\\mathrm{\\mathbf{y}}} &=  \\underset{m \\times p}{\\mathbf{a_1}}\\;\\underset{p \\times k}{\\mathbf{W}_1} + \\underset{1 \\times k}{\\mathbf{b}_1}\n",
     "\\end{alignat*}\n",
     "$$\n",
     "\n",
@@ -785,7 +786,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('mlph')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -799,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
