--- a/Sols/Ex9/sheet09.ipynb
+++ b/Sols/Ex9/sheet09.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import torch\n",
     "from matplotlib import pyplot as plt\n",
     "from torch.optim import Adam, SGD\n",
-    "from torch.utils.data import TensorDataset, DataLoader"
+    "from torch.utils.data import TensorDataset as TD, DataLoader as DL\n",
+    "\n"
    ]
   },
   {
@@ -30,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116\n",
+      "features.shape=(2233, 116), labels.shape=(2233,)\n"
+     ]
+    }
+   ],
    "source": [
     "# load the dijet data\n",
     "features = np.load('data/dijet_features_normalized.npy').T\n",
@@ -51,7 +61,28 @@
     "\n",
     "# TODO: create train, val and test splits\n",
     "\n",
-    "# TODO: create the datsets"
+    "val_split = [0,200]\n",
+    "test_split = [200,400]\n",
+    "train_split = [400,len(features)]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# TODO: create the datsets\n",
+    "test_fetuares = torch.tensor(np.array(features[test_split[0]:test_split[1]]),dtype = torch.double)\n",
+    "test_labels = torch.tensor(np.array(labels[test_split[0]:test_split[1]]))\n",
+    "test_dataset = TD(test_fetuares,test_labels)\n",
+    "\n",
+    "\n",
+    "val_fetuares = torch.tensor(np.array(features[val_split[0]:val_split[1]]),dtype = torch.double)\n",
+    "val_labels = torch.tensor(np.array(labels[val_split[0]:val_split[1]]))\n",
+    "val_dataset = TD(val_fetuares,val_labels)\n",
+    "\n",
+    "\n",
+    "train_fetuares = torch.tensor(np.array(features[train_split[0]:train_split[1]]),dtype = torch.double)\n",
+    "train_labels = torch.tensor(np.array(labels[train_split[0]:train_split[1]]))\n",
+    "train_dataset = TD(train_fetuares,train_labels)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -63,11 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Instantiate an MLP as specified"
+    "# TODO: Instantiate an MLP as specified\n",
+    "from torchvision.ops.misc import MLP \n",
+    "mlp_model = MLP(in_channels= n_features,hidden_channels=[128,128,128,128,1],activation_layer=torch.nn.ReLU)"
    ]
   },
   {
@@ -348,9 +381,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlph2]",
+   "display_name": "Pytorch",
    "language": "python",
-   "name": "conda-env-mlph2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -362,7 +395,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fb35402188f4b53ea7ca1c59d4dd610af939fac77374d085b1d6da6db096eebf"
+   }
   }
  },
  "nbformat": 4,
