--- a/Sols/Ex7/sheet07_main_tutor.ipynb
+++ b/Sols/Ex7/sheet07_main_tutor.ipynb
@@ -798,7 +798,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlph",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -812,11 +812,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4 (v3.10.4:9d38120e33, Mar 23 2022, 17:29:05) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7ffdc53052217594773f6665aec6e115f8cc169cdd66db1aff02556edad0c31d"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
